# raytrace

./: .gitignore  CMakeLists.txt  LICENSE  SDL.props  raytrace.sln  raytrace.vcxproj  raytrace.vcxproj.filters
reflections/: colour.h  main.cpp  ray.h
src/: colour.h  main.cpp  ray.cpp  triangle.cpp  triangle.h  vector.cpp  vector.h
